# uvswitch

./: LICENSE  README.md  pyproject.toml
src/uvswitch/: main.py
